# pdf-rag

./: .env.example  .env.openai.example  .gitignore  Makefile  README.md  prompt.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: test.yml
adr/: 0000-deep-research-mode.md  0001-interactive-tui-mode.md  0002-three-tier-model-system.md  0003-session-logging-and-history.md  0004-multilingual-search.md  0005-client-server-architecture.md  0006-context-management-during-session.md  0007-rag-evaluation-framework.md  0008-prompt-variant-evaluation.md  0009-openai-compatible-provider.md
eval/: README.md  __init__.py  dataset.jsonl.example  evaluate.py  scorer.py
pdf_rag/: chunker.py  cli.py  config.py  context_manager.py  indexer.py  llm.py  provider.py  researcher.py  retriever.py  session_log.py  tui.py
pdf_rag/server/: README.md  app.py
pdf_rag/tui/: __init__.py  app.py  pdf_export.py  stream_client.py  welcome.py
prompts/: answer.txt  extract_citations.txt  own_take.txt  plan_subquestions.txt  reflect.txt  synthesize.txt
prompts/default/: evaluate_answer.txt  plan_subquestions.txt  synthesize.txt  translate_question.txt  update_session_summary.txt
tests/: README.md  conftest.py  test_ask.py  test_chunker.py  test_context_manager.py  test_llm.py  test_research.py  test_researcher_unit.py  test_retriever.py  test_server.py  test_server_errors.py  test_session_log.py
