[project]
name = "pdf-rag"
version = "0.1.0"
requires-python = ">=3.11"
license = {text = "WTFPL"}
dependencies = [
    "pymupdf>=1.24.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
pdf-rag = "pdf_rag.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
